# Hamray

./: .gitignore  build.sh  cgo.go  go.mod  go.sum  hamray.go
cgo/: cgo.go
log/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  log.c  log.h
pkg/hamray/: hamray.go
xray/: xray.go
